# ckb-taproot-deploy

./: .gitignore  Cargo.toml  README.md  taproot-config.json
.github/workflows/: rust.yml
deploy-scripts/auth/: deployment.toml  info.json  step-1-gen-tx.sh  step-2-sign.sh  step-3-apply.sh
deploy-scripts/auth/migrations/: 2022-06-13-072643.json
deploy-scripts/exec-script/: deployment.toml  info.json  step-2-sign.sh
deploy-scripts/exec-script/migrations/: 2022-05-13-025025.json
deploy-scripts/taproot/: deployment.toml  info.json  step-1-gen-tx.sh  step-3-apply.sh
deploy-scripts/taproot/migrations/: 2022-05-13-024315.json
scripts/: generate_taproot_output_key.sh  transfer_secp256k1.sh  transfer_secp256k1_2.sh  transfer_taproot.sh
src/: config.rs  key_path_spending.rs  lib.rs  main.rs  schnorr.rs  script_path_spending.rs  smt.rs  tx_builder.rs  unlock_secp256k1.rs  unlock_taproot.rs  utils.rs
