[package]
name = "ckb-taproot-deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-sdk-rust.git", rev = "4a007d4"}
sparse-merkle-tree = { git = "https://github.com/nervosnetwork/sparse-merkle-tree.git", rev = "dddbed3"}
clap = { version = "3.1.9", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
thiserror = "1.0.30"
bech32 = "0.8.1"
log = "0.4.17"
env_logger = "0.9.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
secp256k1 = { version = "0.20", features = ["recovery"] }
bytes = "1"
jsonrpc-core = "18"
lazy_static = "1.3.0"


ckb-types = "=0.103.0"
ckb-dao-utils = "=0.103.0"
ckb-traits = "=0.103.0"
ckb-jsonrpc-types = "=0.103.0"
ckb-hash = "=0.103.0"
ckb-resource = "=0.103.0"
ckb-crypto = { version = "=0.103.0", features = ["secp"] }
rand = { version = "0.7.3" }
ckb-mock-tx-types = { version = "0.3.0", optional = true }
ckb-chain-spec = { version = "=0.103.0", optional = true }
ckb-script = { version = "=0.103.0", optional = true }

[features]
default = []
test = []


